--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,5 +4,5 @@ html, body {
 }
 
 header {
-    background-image: url("images/Front-space.jpg");
+    background-image: img src=("images/Front-space.jpg");
 }
