--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,5 +11,15 @@ h1 {
     color: green;
 }
 
+nav ul {
+    padding: 0px;
+}
+
+nav a {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+
 
 
