--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,12 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+nav {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+
 .logo-top {
     max-width: 300px;
     
