--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@ h1 {
 
 nav {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
+    font-size: larger;
 }
 
 
