--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,6 +10,7 @@ h1 {
 nav {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: larger;
+    color: black;
 }
 
 
