--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 nav {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: larger;
     color: black;
 }
