--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,6 +30,10 @@ header {
     align-items: center;
 }
 
+header {
+    background-color: black;
+}
+
 main, footer {
     background-color: #02735E;
 }
