--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,7 +31,7 @@ header {
 }
 
 header, footer {
-    background-color:grey ;
+    background-color: white ;
 }
 main {
     background-color: #02735E;
