--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,6 +62,16 @@ img {
     height: 500px;
 }
 
+.float{
+    margin: 10px;
+    float: right;
+    width: 300px;
+  }
+  
+  .clear{
+    clear: right;
+  }
+
 .img-front img {
     height: 200px;
     object-fit: cover;
