--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,6 +34,11 @@ header {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    align-items: center; 
+}
+
 header, footer {
     background-color: white ;
 }
