--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,7 +36,7 @@ header {
 
 footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center; 
 }
 
