--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,9 +36,11 @@ header {
 
 footer {
     display: flex;
-    flex-direction: column-reverse;
-    align-items: center; 
+    flex-direction: row;
+    align-items: center;
+
 }
+
 
 header, footer {
     background-color: white ;
