--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,7 +38,7 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
 }
 
