--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -96,7 +96,7 @@ img {
 
 .img-front1 img {
     display: flex;
-    align-items: center;
+    justify-content: center;
     width: 400px;
     height: 400px;
     object-fit: cover;
