--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -96,6 +96,8 @@ img {
 
 .img-front1 img {
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
     width: 400px;
     height: 400px;
