--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,6 +42,12 @@ header {
 
 }
 
+.container_opening {
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .container {
     display: flex;
     align-items: center;
