--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,6 +46,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .container {
