--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -142,6 +142,7 @@ img {
   .math {
       width: 600px;
       height: 300px;
+      float: right;
   }
 
   @media (min-width: 500px) and (max-width: 1200px){
