--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,6 +48,13 @@ header {
     align-items: center;
 }
 
+.container_learning {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .container {
     display: flex;
     align-items: center;
