--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,8 +130,8 @@ img {
   }
 
   .img-front4 img {
-      width: 200px;
-      height: 300px;
+      width: 400x;
+      height: 200px;
       object-fit: cover;
   }
 
