--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,6 +130,8 @@ img {
   }
 
   .img-front4 img {
+      display: flex;
+      flex-direction: column;
       width: 400px;
       height: 300px;
       object-fit: cover;
