--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,6 +137,11 @@ img {
       object-fit: cover;
   }
 
+  .linkstep {
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: black;
+  }
+
 
   label::after {
     content: "";
