--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,10 +137,10 @@ img {
       object-fit: cover;
   }
 
-  .linkstep {
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      color: black;
-  }
+ a {
+     color:black;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
 
 
   label::after {
