--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,6 +140,7 @@ img {
  a {
      color:black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     font-size: large;
  }
 
 
