--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,7 @@ h1 {
 
 nav {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: larger;
+    font-size: x-large;
     color: black;
 }
 
