--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,12 +52,12 @@ header {
 .container_learning {
     display: flex;
     align-items: center;
-    justify-content: center;
+   flex-direction: column;
 
 }
 
 .item4 {
-    margin: 60px;
+    margin: 20px;
 }
 
 .container {
