--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,7 +52,9 @@ header {
 .container_learning {
     display: flex;
     align-items: center;
-   flex-direction: column;
+    justify-content: center;
+    margin: 60px;
+    float: left;
 
 }
 
