--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,7 +69,7 @@ header {
     align-items: center;
     justify-content: center;
     margin: 30px;
-    flex-direction: column-reverse;
+    flex-direction: row;
 }
 
 .container {
