--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -37,7 +37,7 @@ header {
 }
 
 .container_follow {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
