--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,7 +66,7 @@ header {
 }
 
 .itemicon {
-    display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     margin: 30px;
