--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -163,7 +163,7 @@ img {
       object-fit: cover;
   }
 
-   a {  
+   a, p {  
      color:black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
      font-size: large;
