--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,13 +3,10 @@ html, body {
     padding: 0;
 }
 
-p {
+p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
 
 
 nav a {
@@ -163,7 +160,7 @@ img {
       object-fit: cover;
   }
 
-   a, p {  
+   a {  
      color:black;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
      font-size: large;
