--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,14 +84,15 @@ header {
 
 .containerlevel {
     display: flex;
-    align-items: stretch;
+    align-items: center;
+
 }
 
 
 .item8 {
     display: flex;
     flex-direction: column;
-    margin: 40px;
+    margin: 60px;
 }
 
 
