--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -90,7 +90,8 @@ header {
 
 .containerv {
     display: flex;
-    flex-direction: row-reverse
+    flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
