--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -90,8 +90,10 @@ header {
 
 .containerv {
     display: flex;
-    flex-direction: row;
+    align-items: center;
     flex-wrap: wrap;
+    justify-content: center;
+    display: inline;
 
 }
 
