--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -89,8 +89,10 @@ header {
 }
 
 .containerv {
-    display: inline-flex;
-    
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
 
