--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,9 +88,16 @@ header {
 
 }
 
+.containerv {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
+
 .itemv {
+    
     margin: 10px;
-    display: inline;
     
 
 }
