--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -91,7 +91,7 @@ header {
 containerv {
     display: inline-block;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap-reverse
     justify-content: flex-start;
 }
 
