--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,11 +88,11 @@ header {
 
 }
 
-containerv {
-    display: inline-block;
+.itemv {
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap-reverse
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: left;
 }
 
 
