--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,13 +88,6 @@ header {
 
 }
 
-.itemv {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 10px;
-}
-
 
 .item8 {
     display: flex;
@@ -193,8 +186,10 @@ img {
   }
 
   .img-visit img {
+      display: block;
       width: 350px;
       height: 400px;
+
   }
 
   .math {
