--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,11 @@ p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+p {
+    display: flex;
+    flex-direction: column;
+}
+
 
 
 nav a {
@@ -186,9 +191,9 @@ img {
   }
 
   .img-visit img {
-      display: block;
       width: 350px;
       height: 400px;
+
 
   }
 
