--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,7 +26,7 @@ a {
 header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 
