--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,12 @@ p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+p {
+    width: 300px;
+}
+
+
+
 nav a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
