--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,11 +7,6 @@ p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-p {
-    width: 300px;
-}
-
-
 
 nav a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -145,6 +140,8 @@ img {
   }
 
 .img-front1 img {
+    display: block;
+    justify-content: space-around;
     width: 400px;
     height: 400px;
     object-fit: cover;
