--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,7 +141,7 @@ img {
 
 .img-front1 img {
     display: block;
-    justify-content: center;
+    justify-content: space-around;
     width: 400px;
     height: 400px;
     object-fit: cover;
