--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,8 +140,7 @@ img {
   }
 
 .img-front1 img {
-    display: block;
-    justify-content: space-around;
+    max-width: 100%;
     width: 400px;
     height: 400px;
     object-fit: cover;
