--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -177,8 +177,7 @@ img {
 
   .img-pinkblue img {
       max-width: 100%;
-      width: 600px;
-      height: 300px;
+      width: 15%;
   }
 
   .img-school img {
