--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -176,7 +176,9 @@ img {
   }
 
   .img-pinkblue img {
-      width: 80%
+      width: 600px;
+      height: 300px;
+      max-width: 100%;
   }
 
   .img-school img {
