--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -204,6 +204,9 @@ img {
   }
 
   @media (min-width: 500px) and (max-width: 1200px){
+      .container {
+          flex-direction: row;
+      }
 
 } 
 
