--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,7 +140,8 @@ img {
   }
 
 .img-front1 img {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     max-width: 100%;
     width: 400px;
     height: 400px;
