--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,7 +141,7 @@ img {
 
 .img-front1 img {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     max-width: 100%;
     width: 400px;
     height: 400px;
