--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,7 +140,7 @@ img {
   }
 
 .img-front1 img {
-    display: inline-block;
+    display: inline;
     justify-content: space-around;
     max-width: 100%;
     width: 300px;
