--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -135,6 +135,8 @@ img {
 
 
 .img-front img {
+    justify-content: center;
+    margin: 10px;
     height: 200px;
     width: 800px;
     max-width: 100%;
