--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -194,12 +194,20 @@ img {
   }
 
   .img-visit img {
-      display: inline;
       width: 350px;
       height: 400px;
 
-
   }
+
+  .container9 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+
+  } 
+      
+  
 
   .math {
       width: 800px;
