--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -194,15 +194,14 @@ img {
   }
 
   .img-visit img {
+      display:inline-block;
       width: 350px;
       height: 400px;
 
   }
 
   .container9 {
-    display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: flex;
 
 
   } 
