--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -98,10 +98,12 @@ header {
     flex: 1;
 }
 
+.containerlevel {
+    display: flex;
+}
+
 
 .item8 {
-    display: flex;
-    flex-direction: column;
     margin: 60px;
 }
 
