--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -95,6 +95,9 @@ header {
 .containerlevel {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    float: left;
 }
 
 
