--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -49,10 +49,8 @@ header {
 
 .container_learning {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 60px;
-    float: left;
 
 }
 
