--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -40,6 +40,11 @@ header {
 
 }
 
+section {
+    padding: 20px;
+    background-color: lightblue;
+  }
+
 
 .container_opening {
     display: flex;
