--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -215,7 +215,13 @@ img {
   }
 
   @media (min-width: 600px) and (max-width: 1200px) {
+      container {
+          flex-direction: column;
+      }
 }
+
+
+
       
 
 
