--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -214,11 +214,11 @@ img {
       max-width: 100%;
   }
 
-  @media (min-width: 600px) and (max-width: 1200px) {
+  @media only screen and (min-with: 600px) {
       container {
-          flex-direction: column;
+          flex-direction: row;
       }
-}
+  }
 
 
 
