--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,7 @@ header {
 
 .container_follow {
     display: inline-flex;
+    align-items: center;
     flex-direction: row;
     background-color: #02735e;
 
