--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,6 +54,11 @@ header {
     background-color: #02735e;
 }
 
+.comtaimer_experiencefun {
+    display: flex;
+    background-color: #02735e;
+}
+
 .container_learning {
     display: flex;
     flex-direction: column;
