--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -65,6 +65,12 @@ header {
     background-color: #02735e;
 }
 
+.item_explore {
+    width: 300px;
+    height: 300px;
+
+}
+
 .item4 {
     margin: 20px;
 
