--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,7 +67,10 @@ header {
 
 .item_explore {
     width: 300px;
-    height: 300px;
+    height: 400px;
+    max-width: 100%;
+    margin: 15px;
+
 
 }
 
