--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,6 +62,7 @@ header {
 }
 
 .container_explore {
+    display: inline; 
     background-color: #02735e;
 }
 
@@ -69,7 +70,6 @@ header {
     width: 300px;
     height: 400px;
     max-width: 100%;
-    margin: 15px;
 
 
 }
