--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,6 +64,7 @@ header {
 .container_explore {
     display: flex;
     flex-direction: row;
+    align-items: center;
     background-color: #02735e;
 }
 
