--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,7 +64,6 @@ header {
 .container_explore {
     display: flex;
     flex-direction: row;
-    align-items: center;
     background-color: #02735e;
 }
 
@@ -72,6 +71,7 @@ header {
     width: 300px;
     height: 500px;
     max-width: 100%;
+    border-color: aliceblue;
 
 
 }
