--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,7 +71,7 @@ header {
     width: 300px;
     height: 500px;
     max-width: 100%;
-    border-color: aliceblue;
+   justify-content: center;
 
 
 }
