--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -73,9 +73,14 @@ header {
 }
 
 .img-fun { 
+    display: inline-block;
+    margin: 55px;
+    margin-bottom: 10px;
+    justify-content: center;
+    max-width: 100%;
     width: 300px;
     height: 400px;
-    max-width: 100%;
+    object-fit: cover;
 
 }
 .item4 {
