--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,7 +38,7 @@ header {
 
 }
 
-.container_welcome, .containerlevel, .container_experience {
+.container_welcome, .containerlevel, .container_experience, .container_text {
     background-color: #02735e;
 }
 
