--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,7 +39,7 @@ header {
 }
 
 .container_welcome, .containerlevel, .container_experience, .container_text, .container_ant, 
-.container_learning, .container_learning2 
+.container_learning, .container_learning2, .containercos 
  {
     background-color: #02735e;
 }
