--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -155,7 +155,13 @@ nav ul {
     color: #f23d7f
 }
 
+.floated {
+    float: left;
+    max-width: 100%;
+    width: 300px;
+    height: 400px;
 
+}
 
 
 img {
