--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -174,7 +174,9 @@ img {
       float: left;
       width: 300px;
       height: 415px;
-      margin-top: 5px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-left: 10px;
   }
 
 
