--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,6 +34,7 @@ header {
 .container_follow {
     background-color: #02735e;
     align-items: center;
+    justify-content: space-around;
     
 }
 
