--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,10 +38,11 @@ header {
 
 
 .container_welcome, .containerlevel, .container_experience, .container_text, .container_ant, 
-.container_learning, .container_learning2, .containercos, .container9, .container_about 
- {
+.container_learning, .container_learning2, .containercos, .container9, 
+.container_about,.container_explore {
     background-color: #02735e;
 }
+
 
 .img-front1 img {
     display: inline-block;
@@ -68,10 +69,6 @@ header {
     flex-direction: column;
     align-items: center;
 
-}
-
-.container_explore {
-    background-color: #02735e;
 }
 
 .item_explore {
