--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -240,8 +240,12 @@ img {
 
   @media (max-width: 480px) {
       .p {
-          font-size: 30px;
-          text-align: center;
+          font-size: 16px;
+      }
+
+      .container_welcome {
+          display: flex;
+          flex-direction: column;
       }
   }
 
