--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -241,7 +241,9 @@ img {
   @media (max-width: 480px) {
       .p {
           font-size: 16px;
+          background-color: orangered;
       }
+
 
   }
 
