--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -241,6 +241,8 @@ img {
   @media (max-width: 480px) {
       .p {
           font-size: 16px;
+      }
+      main {
           background-color: orangered;
       }
 
