--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -248,7 +248,7 @@ img {
 
       .img-front1 {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
       }
      
 
