--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -249,6 +249,7 @@ img {
       .img-front1 {
           display: flex;
           flex-direction: column;
+          justify-content: center;
       }
      
 
