--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -250,6 +250,7 @@ img {
           display: flex;
           flex-direction: column;
           justify-content: center;
+          margin: 0px;
       }
      
 
