--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -256,9 +256,11 @@ img {
           align-items: center;
       }
 
-      a {
-          color: orangered;
+      .container_experience {
+          font-size: larger;
       }
+
+  
 
 
 
