--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -259,6 +259,7 @@ img {
       .container_experience {
           font-size: 16px;
           justify-content: center;
+          justify-items: center;
       }
 
   
