--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -260,6 +260,7 @@ img {
           font-size: 16px;
           justify-content: center;
           justify-items: center;
+          align-items: center;
       }
 
   
