--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -261,6 +261,7 @@ img {
           justify-content: center;
           justify-items: center;
           align-items: center;
+          align-content: space-around;
       }
 
   
