--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -261,6 +261,15 @@ img {
         
       }
 
+      .float {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0px;
+        align-items: center;
+
+      }
+
   
 
 
