--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -134,12 +134,13 @@ header {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: space-between;
+    justify-content: center;
 }
 
 .img-visit {
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
+    margin: 15px;
 }
 
 
