--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -180,7 +180,7 @@ img {
     height: 200px;
     max-width: 100%;
     margin-left: -5px;
-    margin-right: -40ox;
+    margin-right: -40px;
   }
 
   .float {
