--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -178,9 +178,8 @@ img {
 
 .img-front img {
     height: 200px;
+    width: 900px;
     max-width: 100%;
-    margin-left: -80px;
-    margin-right: -40px;
   }
 
   .float {
