--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -273,6 +273,8 @@ img {
 
       .container_experience {
           font-size: 16px;
+          text-align: center;
+          
         
       }
 
