--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -273,7 +273,7 @@ img {
 
       .container_experience {
           font-size: 16px;
-          text-align: center;
+          text-align: left;
           
         
       }
