--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -274,6 +274,7 @@ img {
       .container_experience {
           font-size: 16px;
           text-align: left;
+          margin: 5px;
           
         
       }
