--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -143,7 +143,13 @@ header {
 }
 
 .container_experience {
-    text-align: center;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    
 }
 
 header, footer {
