--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,7 @@ html, body {
 p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.shortenedText {
+p {
     max-width: 600px;
     margin: 0 auto;
   }
