--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -188,6 +188,8 @@ img {
       float: left;
       width: 300px;
       height: 415px;
+      justify-items: center;
+      align-items: center;
   }
 
 
