--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,7 +64,8 @@ header {
   }
 
   .float {
-      width: 200px;
+      width: 300px;
+      max-width: 100%;
       float: left;
       align-items: center;
   }
