--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -65,7 +65,7 @@ header {
 
   .float {
       width: 300px;
-      height: 330x;
+      height: 310px;
       float: left;
       align-items: center;
   }
