--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,6 +5,7 @@ html, body {
 
 p,h1,h2,h3,h4,h5 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
     max-width: 600px;
     margin: 0 auto;
 
