--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,6 +11,10 @@ p,h1,h2,h3,h4,h5 {
 
 }
 
+main {
+    background-color: black;
+}
+
 nav a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
