--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,6 +15,9 @@ main {
     background-color: black;
 }
 
+.container {
+    color: black;
+}
 
 
 nav a {
@@ -174,7 +177,6 @@ header {
 
 header, footer {
     background-color: white ;
-    color: black;
 }
 
 nav {
