--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,6 +31,7 @@ nav a {
 /* Links */
 a {
     text-decoration: none;
+    color: white;
 }
 
 a:hover {
@@ -162,7 +163,6 @@ header {
 
 .item8 {
     margin: 20px;
-    a: white;
 }
 
 .container9 {
