--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,7 +19,7 @@ main {
 
 nav a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #005174;
+    color: black;
     font-size: larger;
 }
 
