--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,16 +130,13 @@ header {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: black;
-    
+    justify-content: center;    
 
 }
 
 .item {
     margin: 30px;
-    color: black;    
+    text-decoration-color: black;    
     
 }
 
