--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -131,7 +131,6 @@ header {
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #f23d7f;  
 
 }
 
@@ -183,8 +182,12 @@ header {
 }
 
 
-header, footer {
+header {
     background-color: white ;
+}
+
+footer {
+    background-color: #f23d7f;
 }
 
 nav {
