--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -222,6 +222,13 @@ img {
     max-width: 100%;
   }
 
+  .img-visit {
+      display: inline-block;
+      width: 300px;
+      height: 300px;
+      
+  }
+
 
   .img-icons img {
       width: 50px;
