--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -224,8 +224,10 @@ img {
 
   .img-visit {
       display: inline-block;
+      flex-wrap: wrap;
       width: 300px;
       height: 300px;
+      max-width: 100;
       
   }
 
