--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -175,7 +175,11 @@ header {
     margin-top: 20px;
 }
 
-
+.img-visit {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 15px;
+}
 .img-visit {
     display: inline-block;
     flex-wrap: wrap;
