--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -176,13 +176,18 @@ header {
 }
 
 .img-visit {
-    flex-direction: row;
+    display: inline-block;
     flex-wrap: wrap;
     margin: 15px;
     width: 300px;
     height: 300px;
 }
-
+.img-visit {
+    flex-wrap: wrap;
+    
+    max-width: 100;
+    
+}
 
 
 header {
