--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -265,6 +265,13 @@ img {
       height: 300px;
   }
 
+  .img-visit img {
+    display:inline-block;
+    width: 350px;
+    height: 400px;
+
+}
+
 
   .rocket {
     width: 800px;
