--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -175,14 +175,9 @@ header {
 }
 
 .img-visit {
-    display: inline-block;
-    margin: 55px;
-    margin-bottom: 10px;
-    justify-content: center;
-    max-width: 100%;
-    width: 300px;
-    height: 400px;
-    object-fit: cover;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 15px;
 }
 
 
