--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -169,9 +169,8 @@ header {
 
 .container9 {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
 }
 
 .img-visit {
