--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,6 +54,10 @@ header {
   padding: -15px;
 }
 
+.trythis {
+  background-color: blue;
+}
+
 .container_follow {
   display: flex;
   align-items: center;
