--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,10 +54,6 @@ header {
   padding: -15px;
 }
 
-.trythis {
-  background-color: blue;
-}
-
 .container_follow {
   display: flex;
   align-items: center;
@@ -84,45 +80,52 @@ header {
   background-color: #003333;
 }
 
-.img-front1 {
+.trythis {
   display: flex;
-
-  width: 300px;
-  height: 350px;
-  padding-top: 50px;
-  padding-right: 40px;
-  padding-bottom: 50px;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  background-color: #003333;
+  height: 600px;
+}
+.img-front1 {
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 15px;
 }
 
 .img-front1 img {
+  display: inline-block;
+  width: 300px;
+  height: 350px;
   object-fit: cover;
-  margin: 10px;
 }
 
 .container_red {
   margin-top: 20px;
-  height: 800px;
+  height: 600px;
+  padding: 20px;
 }
 
 .welcome_text {
   padding-top: 15px;
   float: right;
-  padding-right: 80px;
+  padding: 30px;
 }
 
 .float {
-  width: 300px;
-  height: 345px;
+  width: 400px;
+  height: 450px;
   margin-left: 30px;
-  padding-top: 20px;
+  padding-top: 45px;
 }
 
 .container_opening {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 250px;
-  padding-top: 80px;
 }
 
 .container_learning {
@@ -290,33 +293,23 @@ label::after {
   max-width: 100%;
 }
 
-@media (min-width: 600px) and (max-width: 1200px) {
-}
-
-@media only screen and (min-with: 600px) {
-}
-
 @media (max-width: 480px) {
-  .p {
-    font-size: 16px;
-  }
-
   main {
     background-color: black;
   }
 
-  .container_welcome {
+  .trythis {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto;
   }
 
   .img-front1 {
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    height: 900px;
   }
 
   .img-front1 img {
@@ -328,4 +321,10 @@ label::after {
     font-size: 16px;
     text-align: left;
   }
+}
+
+@media only screen and (min-with: 600px) {
+}
+
+@media (min-width: 600px) and (max-width: 1200px) {
 }
