--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,6 +88,10 @@ header {
   background-color: #003333;
   height: 600px;
 }
+
+.container_ant {
+  margin-top: 10px;
+}
 .img-front1 {
   flex-direction: row;
   flex-wrap: wrap;
@@ -107,7 +111,9 @@ header {
   padding: 20px;
 }
 
-.welcome_text {
+.welcome_text,
+.item4,
+.item_explore {
   padding-top: 15px;
   float: right;
   padding: 30px;
@@ -187,7 +193,11 @@ header {
   flex: 1;
 }
 
-.containerlevel {
+.containerlevel,
+.container_text,
+.containerex,
+.itemcos,
+.container_about {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -270,9 +280,12 @@ label::after {
   display: block;
 }
 
-.img-school img {
+.img-school,
+.img-fun {
   width: 300px;
   height: 300px;
+  margin-left: 30px;
+  padding-top: 45px;
 }
 
 .img-visit img {
