--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 p,
@@ -60,7 +60,6 @@ header {
   justify-content: space-around;
   margin-top: 10px;
   height: 250px;
-  margin-bottom: 15px;
 }
 
 .container_welcome,
@@ -78,6 +77,10 @@ header {
 .container_opening,
 .container_follow {
   background-color: #003333;
+}
+
+.container_explore {
+  margin-top: 10px;
 }
 
 .trythis {
@@ -106,7 +109,7 @@ header {
 }
 
 .container_red {
-  margin-top: 20px;
+  margin-top: 10px;
   height: 600px;
   padding: 20px;
 }
@@ -132,12 +135,14 @@ header {
   align-items: center;
   justify-content: center;
   height: 250px;
+  margin-top: 10px;
 }
 
 .container_learning {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .item_explore {
@@ -211,7 +216,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .img-visit {
@@ -257,7 +262,7 @@ img {
 
 .img-logobottom img {
   max-width: 300px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .img-front4 img {
@@ -286,6 +291,21 @@ label::after {
   height: 300px;
   margin-left: 30px;
   padding-top: 45px;
+}
+.img4 {
+  width: 300px;
+  height: 300px;
+  margin-left: 60px;
+  padding-top: 45px;
+  padding-bottom: 15px;
+}
+
+.text4 {
+  padding-top: 15px;
+  float: right;
+  margin-right: 60px;
+  padding: 60px;
+  text-align: justify;
 }
 
 .img-visit img {
